[gd_scene load_steps=72 format=3 uid="uid://dn4twbhrm62vf"]

[ext_resource type="Texture2D" uid="uid://bwmux5twqpyof" path="res://art/characters/slime.png" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://cue0onja2ua0j" path="res://scripts/enemy.gd" id="1_md0e3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5lniq"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w3jn"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiwvf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pw1s"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5geg"]
atlas = ExtResource("1_7p1mj")
region = Rect2(128, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0yyi"]
atlas = ExtResource("1_7p1mj")
region = Rect2(160, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5utat"]
atlas = ExtResource("1_7p1mj")
region = Rect2(192, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0b4fd"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_13roy"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5akt"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shcg2"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ile5s"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x4g4"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pwtc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4rgx"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mchx"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3vcr"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaulx"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f82d"]
atlas = ExtResource("1_7p1mj")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lioqc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_md0e3"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ra3w"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uy6h"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w8v"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("1_7p1mj")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lg75"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsnsy"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_thsr5"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekh6n"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sbpf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(128, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_78kod"]
atlas = ExtResource("1_7p1mj")
region = Rect2(160, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_605iw"]
atlas = ExtResource("1_7p1mj")
region = Rect2(192, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lt7r"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tysqt"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbbx4"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rogs8"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrm80"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6awcb"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjec0"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6q4o"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tuss"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v6cf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vab5u"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiusc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ie7m"]
atlas = ExtResource("1_7p1mj")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya47j"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyejq"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0dkt"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdxul"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7lhw"]
atlas = ExtResource("1_7p1mj")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gst0f"]
atlas = ExtResource("1_7p1mj")
region = Rect2(160, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm4rh"]
atlas = ExtResource("1_7p1mj")
region = Rect2(192, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x24ca"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yi8r"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb7ap"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_md484"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipns3"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qclf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8i8w"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_otmr2"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtq4b"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0cyh"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0wcc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ycm"]
atlas = ExtResource("1_7p1mj")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7p1mj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lniq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w3jn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiwvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pw1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5geg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0yyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5utat")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0b4fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13roy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5akt")
}],
"loop": true,
"name": &"back_fear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shcg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ile5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x4g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pwtc")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4rgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mchx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3vcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaulx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f82d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lioqc")
}],
"loop": true,
"name": &"back_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md0e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ra3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uy6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lg75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsnsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thsr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekh6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sbpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78kod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_605iw")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lt7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tysqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbbx4")
}],
"loop": true,
"name": &"front_fear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rogs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrm80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6awcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjec0")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6q4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tuss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v6cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vab5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiusc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ie7m")
}],
"loop": true,
"name": &"front_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya47j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyejq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0dkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdxul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7lhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gst0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm4rh")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x24ca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yi8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb7ap")
}],
"loop": true,
"name": &"side_fear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md484")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipns3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qclf")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8i8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otmr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtq4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0cyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0wcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1ycm")
}],
"loop": true,
"name": &"side_jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_md0e3"]
radius = 43.0116

[sub_resource type="CircleShape2D" id="CircleShape2D_4ra3w"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5uy6h"]
radius = 12.0

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_md0e3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7p1mj")
animation = &"side_jump"
frame_progress = 0.184542
offset = Vector2(0, -6)

[node name="detection_area" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_md0e3")

[node name="enemy_collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_4ra3w")

[node name="enemy_hitbox" type="Area2D" parent="."]
visible = false

[node name="enemy_hit_area" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_5uy6h")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="health_bar" type="ProgressBar" parent="."]
visible = false
modulate = Color(0, 0.784314, 0, 1)
offset_left = -6.0
offset_top = -20.0
offset_right = 114.0
offset_bottom = 7.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
